tests/functional2/lang/function-recursion/evail-fail-maxCallDepth1-maxCallDepth.err.exp
error:
       … from call site
         at /pwd/in.nix:2:22:
            1| # Exactly two function calls deep, so should fail with maxCallDepth < 2
            2| let f = x: x + 1; in f (f 0)
             |                      ^
            3|

       … while calling 'f'
         at /pwd/in.nix:2:9:
            1| # Exactly two function calls deep, so should fail with maxCallDepth < 2
            2| let f = x: x + 1; in f (f 0)
             |         ^
            3|

       … while evaluating x
         at /pwd/in.nix:2:12:
            1| # Exactly two function calls deep, so should fail with maxCallDepth < 2
            2| let f = x: x + 1; in f (f 0)
             |            ^
            3|

       error: stack overflow; max-call-depth exceeded
       at /pwd/in.nix:2:25:
            1| # Exactly two function calls deep, so should fail with maxCallDepth < 2
            2| let f = x: x + 1; in f (f 0)
             |                         ^
            3|
